tests/typec-test/test_out/access-violation.txt
error: inaccessible scope item
 --> access-violation/root.ctl:3:23
  |
3 | }fn main() -> uint => pass(0)
  |                       ^^^^ here
  |
 ::: access-violation/root/a.ctl:1:9
  |
1 | priv fn pass(v: uint) -> uint => v
  |         ---- info: item defined here
  |
  = info: item is defined in a different module and is private

error: inaccessible scope item
 --> access-violation/root.ctl:4:36
  |
4 | fn other_main() -> uint => A\new().a
  |                                    ^ here
  |
 ::: access-violation/root/a.ctl:3:10
  |
3 |     priv a: uint
  |          - info: item defined here
  |
  = info: item is defined in a different module and is private

info: tir repr of functions:
fn [] pass(var0: uint) -> uint return var0

fn [] new() -> 4\A return 4\A\{0}



